# localyapper

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN_SYSTEM.md  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/commands/: build-check.md  from-stitch.md  new-command.md  phase-check.md  start-session.md
.claude/hooks/: auto-format.sh
docs/: PRD.md  PROGRESS.md  training-paragraphs.md
src/: App.tsx  CLAUDE.md  index.css  main.tsx  vite-env.d.ts
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: capture.rs  mod.rs  vad.rs
src-tauri/src/commands/: corrections.rs  history.rs  hotkeys.rs  mod.rs  models.rs  modes.rs  recording.rs  settings.rs  system.rs
src-tauri/src/context/: detector.rs  mod.rs
src-tauri/src/correction/: engine.rs  learner.rs  mod.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/hotkey/: manager.rs  mod.rs
src-tauri/src/injection/: injector.rs  mod.rs  platform.rs
src-tauri/src/llm/: engine.rs  mod.rs  prompt.rs
src-tauri/src/models/: mod.rs
src-tauri/src/stt/: mod.rs  whisper.rs
src-tauri/src/tray/: mod.rs
src/components/dashboard/: DashboardPage.tsx  LastDictationCard.tsx  ModelStatusCard.tsx  StatCard.tsx
src/components/dictionary/: CorrectionsTab.tsx  DictionaryPage.tsx  TrainingComplete.tsx  TrainingTab.tsx
src/components/history/: HistoryCard.tsx  HistoryPage.tsx
src/components/hotkeys/: HotkeysPage.tsx
src/components/models/: ModelsPage.tsx
src/components/overlay/: CountdownTimer.tsx  Overlay.tsx  Waveform.tsx  YappingEmoji.tsx
src/components/settings/: SettingsLayout.tsx  Sidebar.tsx  TitleBar.tsx
src/components/ui/: card.tsx  (+1 more)
src/hooks/: useCorrections.ts  useDashboard.ts  useHistory.ts  useHotkeys.ts  useModels.ts  useOverlayState.ts  useWizard.ts
src/lib/: formatters.ts  training-paragraphs.ts  utils.ts
src/stores/: appStore.ts  overlayStore.ts  wizardStore.ts
src/types/: commands.ts  overlay.ts
(+18 files in other folders)
