[package]
name = "localyapper"
version = "0.1.0"
description = "Local-first voice dictation desktop app"
authors = ["Chaitanya"]
edition = "2021"

[lib]
name = "localyapper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["stream", "json"] }
cpal = "0.15"
whisper-rs = "0.16"
arboard = "3"
enigo = "0.2"
llama-cpp-2 = "0.1"
encoding_rs = "0.8"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
